--- a/index.html
+++ b/index.html
@@ -2,20 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Matching Game</title>
+    <title>Memory Game</title>
     <meta name="description" content="">
-    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
-    <link rel="stylesheet" href="css/app.css">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+	<link rel="stylesheet" href="css/app.css">
+	
+	
+	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
 
 <body>
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true"  id="onload">
 
-    <div class="container">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title"><i class="fa fa-exclamation-circle"></i>Ready To Play ?</h4>
+        </div>
+        <div class="modal-body">
+         <h4 class="modal-title">Click OK To Play!!!</h4>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+        </div>
+      </div>
+
+    </div>
+</div>
+
+    <div class="container" id="start">
         <header>
-            <h1>Matching Game</h1>
+            <h1>Memory Game</h1>
         </header>
 
+		
         <section class="score-panel">
         	<ul class="stars">
         		<li><i class="fa fa-star"></i></li>
@@ -23,8 +46,8 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves" id="moves">0</span> Moves
-
+        	<span class="moves" id="moves">0</span> Moves&nbsp;&nbsp;&nbsp;&nbsp;Time:       
+			 <span id="timer"> 00 min : 00 sec</span>
             <div class="restart">
         		<i class="fa fa-repeat" onclick="restart()"></i>
         	</div>
@@ -32,55 +55,78 @@
 
         <ul class="deck">
             <li id="block1" class="card" onclick="flip('block1')">
-                <i class="fa fa-diamond"></i>
+                <i class="fa1 fa-diamond"></i>
             </li>
             <li id="block2" class="card" onclick="flip('block2')">
-                <i class="fa fa-paper-plane-o"></i>
+                <i class="fa1 fa-paper-plane-o"></i>
             </li>
             <li id="block3" class="card" onclick="flip('block3')">
-                <i class="fa fa-anchor"></i>
+                <i class="fa1 fa-anchor"></i>
             </li>
             <li id="block4" class="card" onclick="flip('block4')">
-                <i class="fa fa-bolt"></i>
+                <i class="fa1 fa-bolt"></i>
             </li>
             <li id="block5" class="card" onclick="flip('block5')">
-                <i class="fa fa-cube"></i>
+                <i class="fa1 fa-cube"></i>
             </li>
             <li id="block6" class="card" onclick="flip('block6')">
-                <i class="fa fa-anchor"></i>
+                <i class="fa1 fa-anchor"></i>
             </li>
             <li id="block7" class="card" onclick="flip('block7')">
-                <i class="fa fa-leaf"></i>
+                <i class="fa1 fa-leaf"></i>
             </li>
             <li id="block8" class="card" onclick="flip('block8')">
-                <i class="fa fa-bicycle"></i>
+                <i class="fa1 fa-bicycle"></i>
             </li>
             <li id="block9" class="card" onclick="flip('block9')">
-                <i class="fa fa-diamond"></i>
+                <i class="fa1 fa-diamond"></i>
             </li>
             <li id="block10" class="card" onclick="flip('block10')">
-                <i class="fa fa-bomb"></i>
+                <i class="fa1 fa-bomb"></i>
             </li>
             <li id="block11" class="card" onclick="flip('block11')">
-                <i class="fa fa-leaf"></i>
+                <i class="fa1 fa-leaf"></i>
             </li>
             <li id="block12" class="card" onclick="flip('block12')">
-                <i class="fa fa-bomb"></i>
+                <i class="fa1 fa-bomb"></i>
             </li>
             <li id="block13" class="card" onclick="flip('block13')">
-                <i class="fa fa-bolt"></i>
+                <i class="fa1 fa-bolt"></i>
             </li>
             <li id="block14" class="card" onclick="flip('block14')">
-                <i class="fa fa-bicycle"></i>
+                <i class="fa1 fa-bicycle"></i>
             </li>
             <li id="block15" class="card" onclick="flip('block15')">
-                <i class="fa fa-paper-plane-o"></i>
+                <i class="fa1 fa-paper-plane-o"></i>
             </li>
             <li id="block16" class="card" onclick="flip('block16')">
-                <i class="fa fa-cube"></i>
+                <i class="fa1 fa-cube"></i>
             </li>
         </ul>
     </div>
+	<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true"  id="outload">
+
+    <div class="modal-dialog">
+      <div class="modal-content1">
+        <div class="modal-header">
+          <h4 class="modal-title"><b>Congratulations !!!</b></h4>
+        </div>
+        <div class="modal-body">
+         <h4 class="modal-title">Moves Taken : <span id="move">0</span></h4>
+<h4><pre> Ratings :
+<i class="fa fa-star" style="color:yellow"></i><i class="fa fa-star" style="color:yellow"></i><i class="fa fa-star" style="color:yellow"></i>:Before 20 moves
+<i class="fa fa-star" style="color:yellow"></i><i class="fa fa-star" style="color:yellow"></i>:Before 26 moves
+<i class="fa fa-star" style="color:yellow"></i>:Before 30 moves
+No Stars :After 30 moves...
+</pre></h4>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" onclick="restart()">Play Again !!!</button>
+        </div>
+      </div>
+
+    </div>
+</div>
 
     <script src="js/app.js"></script>
 </body>
