--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/app.css">
 	
 	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
 	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
@@ -54,52 +55,52 @@
         </section>
 
         <ul class="deck">
-            <li id="block1" class="card" onclick="flip('block1')">
+            <li id="block1" class="card animated" onclick="flip('block1')">
                 <i class="fa1 fa-diamond"></i>
             </li>
-            <li id="block2" class="card" onclick="flip('block2')">
+            <li id="block2" class="card animated" onclick="flip('block2')">
                 <i class="fa1 fa-paper-plane-o"></i>
             </li>
-            <li id="block3" class="card" onclick="flip('block3')">
+            <li id="block3" class="card animated" onclick="flip('block3')">
                 <i class="fa1 fa-anchor"></i>
             </li>
-            <li id="block4" class="card" onclick="flip('block4')">
+            <li id="block4" class="card animated" onclick="flip('block4')">
                 <i class="fa1 fa-bolt"></i>
             </li>
-            <li id="block5" class="card" onclick="flip('block5')">
+            <li id="block5" class="card animated" onclick="flip('block5')">
                 <i class="fa1 fa-cube"></i>
             </li>
-            <li id="block6" class="card" onclick="flip('block6')">
+            <li id="block6" class="card animated" onclick="flip('block6')">
                 <i class="fa1 fa-anchor"></i>
             </li>
-            <li id="block7" class="card" onclick="flip('block7')">
+            <li id="block7" class="card animated" onclick="flip('block7')">
                 <i class="fa1 fa-leaf"></i>
             </li>
-            <li id="block8" class="card" onclick="flip('block8')">
+            <li id="block8" class="card animated" onclick="flip('block8')">
                 <i class="fa1 fa-bicycle"></i>
             </li>
-            <li id="block9" class="card" onclick="flip('block9')">
+            <li id="block9" class="card animated" onclick="flip('block9')">
                 <i class="fa1 fa-diamond"></i>
             </li>
-            <li id="block10" class="card" onclick="flip('block10')">
+            <li id="block10" class="card animated" onclick="flip('block10')">
                 <i class="fa1 fa-bomb"></i>
             </li>
-            <li id="block11" class="card" onclick="flip('block11')">
+            <li id="block11" class="card animated" onclick="flip('block11')">
                 <i class="fa1 fa-leaf"></i>
             </li>
-            <li id="block12" class="card" onclick="flip('block12')">
+            <li id="block12" class="card animated" onclick="flip('block12')">
                 <i class="fa1 fa-bomb"></i>
             </li>
-            <li id="block13" class="card" onclick="flip('block13')">
+            <li id="block13" class="card animated" onclick="flip('block13')">
                 <i class="fa1 fa-bolt"></i>
             </li>
-            <li id="block14" class="card" onclick="flip('block14')">
+            <li id="block14" class="card animated" onclick="flip('block14')">
                 <i class="fa1 fa-bicycle"></i>
             </li>
-            <li id="block15" class="card" onclick="flip('block15')">
+            <li id="block15" class="card animated" onclick="flip('block15')">
                 <i class="fa1 fa-paper-plane-o"></i>
             </li>
-            <li id="block16" class="card" onclick="flip('block16')">
+            <li id="block16" class="card animated" onclick="flip('block16')">
                 <i class="fa1 fa-cube"></i>
             </li>
         </ul>
@@ -114,10 +115,10 @@
         <div class="modal-body">
          <h4 class="modal-title">Moves Taken : <span id="move">0</span></h4>
 <h4><pre> Ratings :
-<i class="fa fa-star" style="color:yellow"></i><i class="fa fa-star" style="color:yellow"></i><i class="fa fa-star" style="color:yellow"></i>:Before 20 moves
-<i class="fa fa-star" style="color:yellow"></i><i class="fa fa-star" style="color:yellow"></i>:Before 26 moves
-<i class="fa fa-star" style="color:yellow"></i>:Before 30 moves
-No Stars :After 30 moves...
+<i class="fa fa-star" style="color:yellow"></i><i class="fa fa-star" style="color:yellow"></i><i class="fa fa-star" style="color:yellow"></i>:Less Than 20 Moves
+<i class="fa fa-star" style="color:yellow"></i><i class="fa fa-star" style="color:yellow"></i>:Less Than 26 Moves
+<i class="fa fa-star" style="color:yellow"></i>:Less Than 30 moves
+No Stars : More Than 30 moves...
 </pre></h4>
         </div>
         <div class="modal-footer">
