--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <h4 class="modal-title">Click OK To Play!!!</h4>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal" onclick="gamestart()">OK</button>
         </div>
       </div>
 
@@ -54,7 +54,7 @@
         	</div>
         </section>
 
-        <ul class="deck">
+        <ul class="deck" id="card-deck">
             <li id="block1" class="card animated" onclick="flip('block1')">
                 <i class="fa1 fa-diamond"></i>
             </li>
